# accessibility-audit-env

./: .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml
server/: accessibility_audit_environment.py  app.py  grader.py  requirements.txt
server/html_templates/: easy_landing_page.html  expert_checkout.html  hard_webapp.html  medium_dashboard.html
tasks/: task_easy.json  task_expert.json  task_hard.json  task_medium.json
